jlink added to server monitor